--- a/spring-demo-annotation/.classpath
+++ b/spring-demo-annotation/.classpath
@@ -15,7 +15,7 @@
 	<classpathentry kind="lib" path="lib/spring-beans-5.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/spring-beans-5.3.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/spring-beans-5.3.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/spring-context-5.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/spring-context-5.3.1.jar" sourcepath=""/>
 	<classpathentry kind="lib" path="lib/spring-context-5.3.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/spring-context-5.3.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/spring-context-indexer-5.3.1.jar"/>
