--- a/NativeJavaHelloWorld/.classpath
+++ b/NativeJavaHelloWorld/.classpath
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/home/developer/workspace/java-ws/packages/junit4/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="/home/developer/workspace/java-ws/packages/junit4/junit-4.13.2.jar"/>
+	<classpathentry kind="lib" path="/usr/lib/jvm/java-11-openjdk-amd64/lib/jrt-fs.jar" sourcepath="/usr/lib/jvm/java-11-openjdk-amd64/lib/src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
