--- a/NativeJavaHelloWorld/.project
+++ b/NativeJavaHelloWorld/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NativeJavaHelloWorld</name>
+	<name>native-java-helloworld-examples</name>
 	<comment></comment>
 	<projects>
 	</projects>
