--- a/narayana-mysql-wmq/src/main/resources/application.properties
+++ b/narayana-mysql-wmq/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.jta.enabled=true
+com.arjuna.ats.jta=DEBUG
 spring.jta.log-dir=/home/developer/workspace/java-ws/arjuna-xa/narayana-mysql-wmq/anotherstore/
+com.arjuna.ats.jta.common.JTAEnvironmentBean.asyncCommitPoolSize=1
+#com.arjuna.ats.jta.asyncCommitPoolSize=1
+com.arjuna.ats.jta.supportSubtransactions=true
