--- a/maven-multi-module/pom.xml
+++ b/maven-multi-module/pom.xml
@@ -9,6 +9,13 @@
 	<url>http://www.example.com</url>
 	<packaging>pom</packaging>
 
+	<!-- 
+		Java Code Coverage - JACOCO
+		
+		define in child-pom the jacoco plugin, which will generate code coverage report
+		parent pom does not need to define anything related to code coverage
+		creating a aggregator is sonarqube documented but did not see any difference
+	 -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<sonar.projectKey>JavaTestPlay</sonar.projectKey>
@@ -22,36 +29,12 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.jacoco</groupId>
-			<artifactId>jacoco-maven-plugin</artifactId>
-			<version>0.8.11</version>
-		</dependency>
 	</dependencies>
-
-
-	<!-- <build>
-		<plugins>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>report-aggregate</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>report-aggregate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build> -->
 
 	<modules>
 		<module>core</module>
 		<module>service</module>
 		<module>web</module>
-		 <module>report</module>
-	</modules>
+<!-- 		<module>report</module>
+ -->	</modules>
 </project>
