--- a/maven-multi-module/service/pom.xml
+++ b/maven-multi-module/service/pom.xml
@@ -19,19 +19,13 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.baeldung</groupId>
 			<artifactId>core</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
-	<!-- <build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -53,5 +47,5 @@
 				</executions>
 			</plugin>
 		</plugins>
-	</build> -->
+	</build>
 </project>
